log
Sun 09 Oct 2022 11:52:39 PM UTC: 
 tests:  0|5
total_score: 0/70
d1072af
Tue 25 Oct 2022 06:16:47 PM UTC: 
 sudoku.c | 26 +++++++++++++++++++++++++-
 1 file changed, 25 insertions(+), 1 deletion(-)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:60:14: error: subscripted value is neither array nor pointer nor vector
   60 |       if(n[i][j] == 0)
      |              ^
sudoku.c:65:23: error: subscripted value is neither array nor pointer nor vector
   65 |           auxEstado[i][j] = l;
      |                       ^
Compilation failed
4fb6578
Tue 25 Oct 2022 06:17:14 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:60:14: error: subscripted value is neither array nor pointer nor vector
   60 |       if(n[i][j] == 0)
      |              ^
sudoku.c:65:23: error: subscripted value is neither array nor pointer nor vector
   65 |           auxEstado[i][j] = l;
      |                       ^
Compilation failed
4158014
Tue 25 Oct 2022 06:19:12 PM UTC: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:60:14: error: subscripted value is neither array nor pointer nor vector
   60 |       if(n[i][j] == 0)
      |              ^
sudoku.c:65:23: error: subscripted value is neither array nor pointer nor vector
   65 |           auxEstado[i][j] = l;
      |                       ^
Compilation failed
d9aafba
Tue 25 Oct 2022 06:20:18 PM UTC: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:60:11: error: ‘Node’ has no member named ‘sodu’
   60 |       if(n->sodu[i][j] == 0)
      |           ^~
sudoku.c:65:20: error: ‘Node’ has no member named ‘sodu’
   65 |           auxEstado->sodu[i][j] = l;
      |                    ^~
Compilation failed
f5b3627
Tue 25 Oct 2022 06:21:15 PM UTC: 
 sudoku.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
 tests:  0|5
total_score: 0/70
257ff0d
